feat: modificar valores
