# storage/api-docs/api-docs.json
@@ -1088,7 +1088,7 @@
         "/api/value-process": {
             "get": {
                 "tags": [
-                    "Values"
+                    "Values-Process"
                 ],
                 "summary": "Get all cost o values of process",
                 "operationId": "ae44eae7163bd5afc5d9a63dcef5cbc6",
@@ -1118,6 +1118,109 @@
                     },
                     "default": {
                         "description": "An error has occurred."
+                    }
+                }
+            }
+        },
+        "/api/value-process/{id}": {
+            "put": {
+                "tags": [
+                    "Values-Process"
+                ],
+                "summary": "Update value process",
+                "operationId": "642dd3593efa564ed6cc0bb4db4cb2c1",
+                "parameters": [
+                    {
+                        "name": "x-token",
+                        "in": "header",
+                        "description": "Key API",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "month",
+                                    "process_id",
+                                    "demand",
+                                    "provisions",
+                                    "financial_report"
+                                ],
+                                "properties": {
+                                    "month": {
+                                        "type": "string",
+                                        "example": "enero"
+                                    },
+                                    "year": {
+                                        "type": "string",
+                                        "example": "2024"
+                                    },
+                                    "user": {
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "process_id": {
+                                        "type": "integer",
+                                        "example": 9
+                                    },
+                                    "demand": {
+                                        "type": "integer",
+                                        "example": 1000
+                                    },
+                                    "provisions": {
+                                        "type": "integer",
+                                        "example": 1000
+                                    },
+                                    "financial_report": {
+                                        "type": "integer",
+                                        "example": 1000
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Recurso actualizado con éxito",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "$ref": "Process"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Recurso no encontrado"
+                    },
+                    "400": {
+                        "description": "Solicitud inválida"
                     }
                 }
             }
@@ -1291,12 +1394,12 @@
             "description": "Procesos legales."
         },
         {
-            "name": "Status",
-            "description": "Estado para los procesos."
+            "name": "Values-Process",
+            "description": "Valores de los procesos legales."
         },
         {
-            "name": "Values",
-            "description": "Values"
+            "name": "Status",
+            "description": "Estado para los procesos."
         }
     ]
 }
